package Appetizer;

import Pizza.Pizza;

public abstract class AppetizerDecorator extends Pizza {
    public abstract String getDescription();
}
