@startuml

title __PROBLEM 2's Class Diagram__\n

  namespace com.company {
    class com.company.Main {
    }
  }

  namespace Pizza {
    class Pizza.BeefPizza {
    }
  }


  namespace Pizza {
    abstract class Pizza.Pizza {
    }
  }


  namespace Pizza {
    class Pizza.VeggiPizza {
    }
  }

  namespace Decorator {
      abstract class Decorator.Decorator {
      }
    }

  namespace Appetizer {
    abstract class Appetizer.AppetizerDecorator {
    }
  }
  

  namespace Appetizer {
    class Appetizer.FrenchFry {
    }
  }
  

  namespace Appetizer {
    class Appetizer.OnionRing {
    }
  }

  namespace Drinks {
    class Drinks.Coffee {
    }
  }

  namespace Drinks {
    class Drinks.Coke {
    }
  }

  namespace Drinks {
    abstract class Drinks.DrinksDecorator {
    }
  }


'    com.company.Main -[hidden]--> Pizza.Pizza
    Pizza.Pizza -[hidden]--> Decorator.Decorator
    Pizza.Pizza  -[hidden]--> Appetizer.FrenchFry
    Pizza.Pizza  -[hidden]--> Appetizer.OnionRing
    Pizza.Pizza  -[hidden]--> Drinks.Coffee
    Pizza.Pizza  -[hidden]--> Drinks.Coke


    Decorator.Decorator -[hidden]--> Drinks.DrinksDecorator
    Decorator.Decorator -[hidden]--> Appetizer.AppetizerDecorator

    Pizza.BeefPizza -up-|> Pizza.Pizza
    Pizza.VeggiPizza -up-|> Pizza.Pizza
    Decorator.Decorator -up-|> Pizza.Pizza
    Appetizer.AppetizerDecorator -up-|> Decorator.Decorator
    Appetizer.FrenchFry -up-|> Appetizer.AppetizerDecorator
    Appetizer.FrenchFry o-- Pizza.Pizza : pizza
    Appetizer.OnionRing -up-|> Appetizer.AppetizerDecorator
    Appetizer.OnionRing o-- Pizza.Pizza : pizza

    Drinks.Coffee -up-|> Drinks.DrinksDecorator
    Drinks.Coffee o-- Pizza.Pizza : pizza
    Drinks.Coke -up-|> Drinks.DrinksDecorator
    Drinks.Coke o-- Pizza.Pizza : pizza
    Drinks.DrinksDecorator -up-|> Decorator.Decorator




@enduml
